[maven-release-plugin] prepare release V11.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>11.0.0-SNAPSHOT</version>
+  <version>11.0.0</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
@@ -121,7 +121,7 @@
     <connection>scm:git:https://github.com/PowerStat/ToolbaselineJava.git</connection>
     <developerConnection>scm:git:https://github.com/PowerStat/ToolbaselineJava.git</developerConnection>
     <url>https://github.com/PowerStat/ToolbaselineJava</url>
-    <tag>HEAD</tag>
+    <tag>V11.0.0</tag>
   </scm>
 
   <repositories>
@@ -345,7 +345,7 @@
             <configuration>
               <rules>
                 <dependencyConvergence />
-                <banDuplicatePomDependencyVersions/>
+                <banDuplicatePomDependencyVersions />
                 <requirePluginVersions>
                   <banLatest>true</banLatest>
                   <banRelease>true</banRelease>
@@ -353,7 +353,7 @@
                   <phases>clean,deploy,site</phases>
                 </requirePluginVersions>
                 <!-- <requireReleaseDeps/> -->
-                <requireUpperBoundDeps/>
+                <requireUpperBoundDeps />
                 <!--
                 <reactorModuleConvergence>
                   <message>The reactor is not valid</message>
