--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>11.0.1-SNAPSHOT</version>
+  <version>11.0.0</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
