--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,7 @@
           <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
           <tagNameFormat>V@{project.version}</tagNameFormat>
           <autoVersionSubmodules>true</autoVersionSubmodules>
+          <releaseProfiles>release-sign-artifacts</releaseProfiles>
         </configuration>
         <dependencies>
           <dependency>
