--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>11.3.1-SNAPSHOT</version>
+  <version>17.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
@@ -20,29 +20,29 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <license.inceptionYear>2023</license.inceptionYear>
+    <license.inceptionYear>2024</license.inceptionYear>
     <license.licenseName>Apache License, Version 2.0</license.licenseName>
 
     <sonarTypeHost>s01.oss.sonatype.org</sonarTypeHost>
     
     <sonar.host.url>http://localhost:9000</sonar.host.url>
     
-    <javaRelease>11</javaRelease>
+    <javaRelease>17</javaRelease>
     
-    <javadocPluginVersion>3.6.0</javadocPluginVersion>
-    <jxrPluginVersion>3.3.0</jxrPluginVersion>
+    <javadocPluginVersion>3.7.0</javadocPluginVersion>
+    <jxrPluginVersion>3.4.0</jxrPluginVersion>
     <jdependPluginVersion>2.0</jdependPluginVersion>
-    <checktylePluginVersion>3.3.0</checktylePluginVersion>
-    <pmdPluginVersion>3.21.0</pmdPluginVersion>
-    <spotbugsPluginVersion>4.7.3.6</spotbugsPluginVersion>
+    <checktylePluginVersion>3.4.0</checktylePluginVersion>
+    <pmdPluginVersion>3.24.0</pmdPluginVersion>
+    <spotbugsPluginVersion>4.8.6.2</spotbugsPluginVersion>
     <sbcontribPluginVersion>7.6.0</sbcontribPluginVersion>
     <findsecbugsPluginVersion>1.12.0</findsecbugsPluginVersion>
-    <jacocoPluginVersion>0.8.10</jacocoPluginVersion>
+    <jacocoPluginVersion>0.8.12</jacocoPluginVersion>
      
-    <junitVersion>5.10.0</junitVersion>
-    <mockitoVersion>5.6.0</mockitoVersion>
-    <log4jVersion>2.20.0</log4jVersion>
-    <cucumberVersion>7.14.0</cucumberVersion>
+    <junitVersion>5.10.3</junitVersion>
+    <mockitoVersion>5.12.0</mockitoVersion>
+    <log4jVersion>2.23.1</log4jVersion>
+    <cucumberVersion>7.18.0</cucumberVersion>
   </properties>
 
   <profiles>
@@ -60,7 +60,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.4</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -71,6 +71,71 @@
               </execution>
             </executions>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.10.2</version>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>build-native</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+              <!--
+              <execution>
+                <id>test-native</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+              -->
+            </executions>
+          </plugin>
+          
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+              <execution>
+                <id>java-agent</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>java</executable>
+                  <workingDirectory>${project.build.directory}</workingDirectory>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>${mainClass}</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>native</id>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>${project.build.directory}/${imageName}</executable>
+                  <workingDirectory>${project.build.directory}</workingDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+ 
         </plugins>
       </build>
     </profile>
@@ -136,19 +201,19 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.4.0</version>
       </plugin>
       
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.16.1</version>
+        <version>2.17.0</version>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
       </plugin>
 
       <plugin>
@@ -160,12 +225,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.13.0</version>
         <configuration>
           <fork>true</fork>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <optimize>false</optimize>
           <debug>true</debug>
           <release>${javaRelease}</release>
         </configuration>
@@ -192,7 +256,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.3.1</version>
         <configuration>
           <forkCount>1</forkCount> <!-- 0 -->
           <trimStackTrace>false</trimStackTrace>
@@ -210,7 +274,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.3.1</version>
         <dependencies>
           <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -235,13 +299,13 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>3.10.0.2594</version>
+        <version>4.0.0.4121</version>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.2</version>
         <configuration>
           <archive>
             <manifestEntries>
@@ -257,7 +321,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.3.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -271,7 +335,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
         <configuration>
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
@@ -285,13 +349,13 @@
           <dependency>
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-provider-gitexe</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.0</version>
           </dependency>
 
           <dependency>
             <groupId>org.apache.maven.scm</groupId>
             <artifactId>maven-scm-api</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.0</version>
           </dependency>
 
         </dependencies>
@@ -300,7 +364,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.13</version>
+        <version>1.7.0</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
@@ -312,7 +376,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2</version>
         <executions>
           <execution>
             <id>default-deploy</id>
@@ -327,7 +391,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>2.2.0</version>
+        <version>2.4.0</version>
         <configuration>
           <addSvnKeyWords>false</addSvnKeyWords>
           <licenseName>Apache License, Version 2.0</licenseName>
@@ -351,7 +415,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.4.1</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
             <id>enforce</id>
@@ -388,7 +452,7 @@
         <configuration>
           <rules>
             <requireMavenVersion>
-              <version>3.5.4</version>
+              <version>3.8.5</version>
             </requireMavenVersion>
             <requireJavaVersion>
               <version>${javaRelease}</version>
@@ -423,7 +487,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctor-maven-plugin</artifactId>
-            <version>2.2.4</version>
+            <version>3.0.0</version>
           </dependency>
           -->
         </dependencies>
@@ -451,7 +515,7 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.15.1</version>
+        <version>1.16.1</version>
         <configuration>
           <timestampedReports>false</timestampedReports>
         </configuration>
@@ -459,7 +523,7 @@
           <dependency>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-junit5-plugin</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1</version>
           </dependency>
 
         </dependencies>
@@ -468,7 +532,7 @@
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
-        <version>2.2.4</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <id>output-html</id>
@@ -480,7 +544,6 @@
               <sourceDirectory>src/site/asciidoc</sourceDirectory>
               <!-- <sourceDocumentName>index.adoc</sourceDocumentName> -->
               <backend>xhtml5</backend>
-              <sourceHighlighter>coderay</sourceHighlighter>
               <attributes>
                 <toc>left</toc>
               </attributes>
@@ -507,13 +570,13 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-pdf</artifactId>
-            <version>2.3.9</version>
+            <version>2.3.17</version>
           </dependency>
           
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-diagram</artifactId>
-            <version>2.2.13</version>
+            <version>2.3.1</version>
           </dependency>
                     
         </dependencies>
@@ -523,9 +586,8 @@
       <plugin>
         <groupId>com.societegenerale.commons</groupId>
         <artifactId>arch-unit-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.2</version>
         <configuration>
-          <projectPath>${project.basedir}/target</projectPath>
           <rules>
             <preConfiguredRules>
               <rule>com.societegenerale.commons.plugin.rules.HexagonalArchitectureTest</rule>
@@ -566,7 +628,7 @@
           <dependency>
             <groupId>com.societegenerale.commons</groupId>
             <artifactId>arch-unit-build-plugin-core</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.1</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -645,7 +707,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-toolchains-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.0</version>
         <configuration>
           <toolchains>
             <jdk>
@@ -685,7 +747,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.4.5</version>
+        <version>3.6.1</version>
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
         </configuration>
@@ -694,7 +756,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.3.1</version>
         <configuration>
         </configuration>
       </plugin>
@@ -799,7 +861,10 @@
       <plugin>
         <groupId>org.owasp</groupId>
         <artifactId>dependency-check-maven</artifactId>
-        <version>8.4.0</version>
+        <version>10.0.2</version>
+        <configuration>
+          <nvdApiServerId>nvd</nvdApiServerId>
+        </configuration>
       </plugin>
 
     </plugins>
@@ -851,7 +916,7 @@
       <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-suite</artifactId>
-        <version>1.10.0</version>
+        <version>1.10.3</version>
         <scope>test</scope>
       </dependency>
 
@@ -876,7 +941,7 @@
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
-      <version>4.8.0</version>
+      <version>4.8.6</version>
     </dependency>
 
     <dependency>
@@ -922,14 +987,14 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-suite</artifactId>
-      <version>1.10.0</version>
+      <version>1.10.2</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.10.0</version>
+      <version>1.10.2</version>
       <scope>test</scope>
     </dependency>
 
