--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>17.0.1-SNAPSHOT</version>
+  <version>17.0.1</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
@@ -190,7 +190,7 @@
     <connection>scm:git:https://github.com/PowerStat/ToolbaselineJava.git</connection>
     <developerConnection>scm:git:https://github.com/PowerStat/ToolbaselineJava.git</developerConnection>
     <url>https://github.com/PowerStat/ToolbaselineJava</url>
-    <tag>V11.0.0</tag>
+    <tag>V17.0.1</tag>
   </scm>
 
   <repositories>
