--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.powerstat.toolbaseline</groupId>
   <artifactId>tbl-java-parent</artifactId>
-  <version>17.0.2-SNAPSHOT</version>
+  <version>17.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>PowerStatsToolbaselineJava</name>
@@ -29,20 +29,21 @@
     
     <javaRelease>17</javaRelease>
     
-    <javadocPluginVersion>3.7.0</javadocPluginVersion>
-    <jxrPluginVersion>3.4.0</jxrPluginVersion>
-    <jdependPluginVersion>2.0</jdependPluginVersion>
-    <checktylePluginVersion>3.4.0</checktylePluginVersion>
-    <pmdPluginVersion>3.24.0</pmdPluginVersion>
-    <spotbugsPluginVersion>4.8.6.2</spotbugsPluginVersion>
-    <sbcontribPluginVersion>7.6.0</sbcontribPluginVersion>
-    <findsecbugsPluginVersion>1.12.0</findsecbugsPluginVersion>
+    <javadocPluginVersion>3.10.0</javadocPluginVersion>
+    <jxrPluginVersion>3.5.0</jxrPluginVersion>
+    <jdependPluginVersion>2.1</jdependPluginVersion>
+    <checktylePluginVersion>3.5.0</checktylePluginVersion>
+    <pmdPluginVersion>3.25.0</pmdPluginVersion>
+    <spotbugsPluginVersion>4.8.6.4</spotbugsPluginVersion>
+    <sbcontribPluginVersion>7.6.4</sbcontribPluginVersion>
+    <findsecbugsPluginVersion>1.13.0</findsecbugsPluginVersion>
     <jacocoPluginVersion>0.8.12</jacocoPluginVersion>
      
-    <junitVersion>5.10.3</junitVersion>
-    <mockitoVersion>5.12.0</mockitoVersion>
+    <junitVersion>5.11.1</junitVersion>
+    <junitPlatformVersion>1.11.1</junitPlatformVersion>
+    <mockitoVersion>5.14.0</mockitoVersion>
     <log4jVersion>2.23.1</log4jVersion>
-    <cucumberVersion>7.18.0</cucumberVersion>
+    <cucumberVersion>7.19.0</cucumberVersion>
   </properties>
 
   <profiles>
@@ -60,7 +61,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.2.4</version>
+            <version>3.2.7</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -81,7 +82,7 @@
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
-            <version>0.10.2</version>
+            <version>0.10.3</version>
             <extensions>true</extensions>
             <executions>
               <execution>
@@ -101,12 +102,17 @@
               </execution>
               -->
             </executions>
+            <!--
+            <configuration>
+              <mainClass>${exec.mainClass}</mainClass>
+            </configuration>
+            -->
           </plugin>
           
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.1</version>
             <executions>
               <execution>
                 <id>java-agent</id>
@@ -207,13 +213,13 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.17.0</version>
+        <version>2.17.1</version>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.1.3</version>
       </plugin>
 
       <plugin>
@@ -231,7 +237,10 @@
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
           <debug>true</debug>
+          <verbose>false</verbose>
           <release>${javaRelease}</release>
+          <source>${javaRelease}</source>
+          <target>${javaRelease}</target>
         </configuration>
       </plugin>
 
@@ -256,7 +265,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.5.0</version>
         <configuration>
           <forkCount>1</forkCount> <!-- 0 -->
           <trimStackTrace>false</trimStackTrace>
@@ -274,7 +283,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.5.0</version>
         <dependencies>
           <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -335,7 +344,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.1</version>
         <configuration>
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
@@ -375,7 +384,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.1.2</version>
+        <version>3.1.3</version>
         <executions>
           <execution>
             <id>default-deploy</id>
@@ -475,7 +484,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.12.1</version>
+        <version>3.20.0</version>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
@@ -514,7 +523,7 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.16.1</version>
+        <version>1.17.0</version>
         <configuration>
           <timestampedReports>false</timestampedReports>
         </configuration>
@@ -569,7 +578,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-pdf</artifactId>
-            <version>2.3.17</version>
+            <version>2.3.18</version>
           </dependency>
           
           <dependency>
@@ -675,7 +684,7 @@
           <threshold>low</threshold>
           <failOnError>false</failOnError>
           <includeTests>true</includeTests>
-          <excludes>**/module-info.java,**/package-info.java</excludes>
+          <!-- <excludes>**/module-info.java,**/package-info.java</excludes> -->
           <plugins>
             <plugin>
               <groupId>com.mebigfatguy.sb-contrib</groupId>
@@ -716,7 +725,6 @@
         </configuration>
       </plugin>
 
-
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -738,6 +746,54 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.spdx</groupId>
+        <artifactId>spdx-maven-plugin</artifactId>
+        <version>0.7.4</version>
+        <executions>
+          <execution>
+            <id>build-spdx</id>
+            <goals>
+              <goal>createSPDX</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <outputFormat>RDF/XML</outputFormat>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+        <version>2.8.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>makeAggregateBom</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <projectType>library</projectType>
+          <!-- application, framework, library, container, platform, operating-system, device, device-driver, firmware, file, machine-learning-model, data -->
+          <outputFormat>xml</outputFormat>
+        </configuration>
+      </plugin>
+
+      <!--
+      <plugin>
+        <groupId>io.github.pmckeown</groupId>
+        <artifactId>dependency-track-maven-plugin</artifactId>
+        <version>1.7.0</version>
+        <configuration>
+          <dependencyTrackBaseUrl>http://localhost:8081</dependencyTrackBaseUrl>
+          <apiKey>API_KEY</apiKey>
+        </configuration>
+      </plugin>
+      -->
+
     </plugins>
   </build>
 
@@ -746,7 +802,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0</version>
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
         </configuration>
@@ -755,7 +811,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.5.0</version>
         <configuration>
         </configuration>
       </plugin>
@@ -817,7 +873,7 @@
           <spotbugsXmlOutputDirectory>target/site</spotbugsXmlOutputDirectory>
           <failOnError>false</failOnError>
           <includeTests>true</includeTests>
-          <excludes>**/module-info.java,**/package-info.java</excludes>
+          <!-- <excludes>**/module-info.java,**/package-info.java</excludes> -->
           <plugins>
             <plugin>
               <groupId>com.mebigfatguy.sb-contrib</groupId>
@@ -860,7 +916,7 @@
       <plugin>
         <groupId>org.owasp</groupId>
         <artifactId>dependency-check-maven</artifactId>
-        <version>10.0.2</version>
+        <version>10.0.4</version>
         <configuration>
           <nvdApiServerId>nvd</nvdApiServerId>
         </configuration>
@@ -915,7 +971,7 @@
       <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-suite</artifactId>
-        <version>1.10.3</version>
+        <version>${junitPlatformVersion}</version>
         <scope>test</scope>
       </dependency>
 
@@ -986,14 +1042,14 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-suite</artifactId>
-      <version>1.10.2</version>
+      <version>${junitPlatformVersion}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.10.2</version>
+      <version>${junitPlatformVersion}</version>
       <scope>test</scope>
     </dependency>
 
