--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <argLine></argLine>
 
     <license.inceptionYear>2025</license.inceptionYear>
     <license.licenseName>Apache License, Version 2.0</license.licenseName>
@@ -161,17 +162,36 @@
             <version>${jacocoPluginVersion}</version>
             <executions>
               <execution>
-                <id>jacoco-initialize</id>
+                <id>default-prepare-agent</id>
                 <goals>
-                  <goal>prepare-agent-integration</goal>
+                  <goal>prepare-agent</goal>
                 </goals>
               </execution>
               <execution>
-                <id>jacoco-report</id>
-                <phase>test</phase>
+                <id>default-report</id>
                 <goals>
-                  <goal>report-integration</goal>
+                  <goal>report</goal>
                 </goals>
+              </execution>
+              <execution>
+                <id>default-check</id>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <rule>
+                      <element>BUNDLE</element>
+                      <limits>
+                        <limit>
+                          <counter>COMPLEXITY</counter>
+                          <value>COVEREDRATIO</value>
+                          <minimum>0.60</minimum>
+                        </limit>
+                      </limits>
+                    </rule>
+                  </rules>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -188,8 +208,7 @@
             <reportSets>
               <reportSet>
                 <reports>
-                  <!-- select non-aggregate reports -->
-                  <report>report-integration</report>
+                  <report>report</report>
                 </reports>
               </reportSet>
             </reportSets>
@@ -431,6 +450,11 @@
         <configuration>
           <show>protected</show>
           <failOnError>false</failOnError>
+          <!-- Not working!
+          <sourceFileExcludes>
+            <sourceFileExclude>**/module-info.java</sourceFileExclude>
+          </sourceFileExcludes>
+          -->
         </configuration>
         <executions>
           <execution>
@@ -449,7 +473,7 @@
         <configuration>
           <forkCount>1</forkCount> <!-- Not 0 for jacoco -->
           <trimStackTrace>false</trimStackTrace>
-          <argLine>--add-reads org.mockito=java.xml</argLine>
+          <argLine>--add-reads org.mockito=java.xml @{argLine}</argLine>
         </configuration>
         <dependencies>
           <dependency>
@@ -772,6 +796,13 @@
             <artifactId>asciidoctorj-diagram-plantuml</artifactId>
             <version>1.2025.3</version>
           </dependency>
+          
+          <!--Linux Bugfix -->
+          <dependency>
+            <groupId>org.jruby</groupId>
+            <artifactId>jruby-core</artifactId>
+            <version>9.4.14.0</version>
+          </dependency>
   
         </dependencies>
 
@@ -888,7 +919,7 @@
         </configuration>
       </plugin>
 
-      <plugin> <!-- Not working: https://issues.apache.org/jira/browse/MJDEPS-25 -->
+      <plugin> <!-- Not working: https://github.com/apache/maven-jdeps-plugin/issues/51 -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jdeps-plugin</artifactId>
         <version>3.1.2</version>
