--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <jdependPluginVersion>2.1</jdependPluginVersion>
     <checktylePluginVersion>3.6.0</checktylePluginVersion>
     <pmdPluginVersion>3.28.0</pmdPluginVersion>
-    <spotbugsPluginVersion>4.9.8.1</spotbugsPluginVersion>
+    <spotbugsPluginVersion>4.9.8.2</spotbugsPluginVersion>
     <sbcontribPluginVersion>7.6.13</sbcontribPluginVersion>
     <findsecbugsPluginVersion>1.14.0</findsecbugsPluginVersion>
     <jacocoPluginVersion>0.8.14</jacocoPluginVersion>
@@ -412,7 +412,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>2.20.1</version>
       </plugin>
 
       <plugin>
@@ -424,7 +424,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.4.0</version>
       </plugin>
 
       <plugin>
@@ -450,11 +450,9 @@
         <configuration>
           <show>protected</show>
           <failOnError>false</failOnError>
-          <!-- Not working!
           <sourceFileExcludes>
-            <sourceFileExclude>**/module-info.java</sourceFileExclude>
+            <sourceFileExclude>**\/module-info.java</sourceFileExclude>
           </sourceFileExcludes>
-          -->
         </configuration>
         <executions>
           <execution>
@@ -513,7 +511,7 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>5.3.0.6276</version>
+        <version>5.4.0.6343</version>
       </plugin>
 
       <plugin>
@@ -522,6 +520,10 @@
         <version>3.5.0</version>
         <configuration>
           <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>${main}</mainClass>
+            </manifest>
             <manifestEntries>
               <Version>${project.version}</Version>
               <GIT>https://github.com/PowerStat/ToolbaselineJava.git</GIT>
@@ -534,7 +536,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -548,7 +550,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.0</version>
         <configuration>
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
@@ -727,7 +729,7 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.21.1</version>
+        <version>1.22.0</version>
         <configuration>
           <timestampedReports>false</timestampedReports>
         </configuration>
@@ -788,7 +790,7 @@
           <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj-diagram</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
           </dependency>
                   
           <dependency>
@@ -987,7 +989,7 @@
       <plugin>
         <groupId>org.openrewrite.maven</groupId>
         <artifactId>rewrite-maven-plugin</artifactId>
-        <version>6.23.0</version>
+        <version>6.24.0</version>
         <dependencies>
         </dependencies>
       </plugin>
@@ -1205,7 +1207,7 @@
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>checker-qual</artifactId>
-      <version>3.52.0</version>
+      <version>3.52.1</version>
     </dependency>
     
     <dependency>
@@ -1312,7 +1314,7 @@
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
-      <version>4.2.4</version>
+      <version>4.2.5</version>
       <scope>test</scope>
     </dependency>
 
